# FOSDEM-video

./: .gitmodules
software/audiomixer/MockMix/: MockMix.ino
software/audiomixer/mixercontrol/: CMakeLists.txt  build.sh  demo.c  run.sh
software/audiomixer/mixercontrol/mixer/: CMakeLists.txt  mixer.h  mixer_api.c  mixer_api.h  mixer_cmd.c  mixer_cmd.h  mixer_conn.c  mixer_conn.h  mixer_constants.h
software/audiomixer/mixercontrol/web/: CMakeLists.txt  main.c
software/audiomixer/mockmixer/: build.sh  main.cpp  run.sh
